<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">金指投</string>
    <string name="login_hint_name">请输入手机号</string>
    <string name="login_hint_passwd">请输入密码</string>
    <string name="login_btn">登 录</string>
    <string name="wechat_btn">微信登录</string>
    <string name="register_btn">注 册</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="register_num">注册账号</string>
    <string name="login_gestrue">手势登录</string>
    <string name="visitor">游客入口</string>
    <string name="experience">立即体验</string>
    <string name="homepage">主页</string>
    <string name="roadshow">微路演</string>
    <string name="invest">我要投资</string>
    <string name="mine">我的</string>
    <string name="username">真实姓名</string>
    <string name="username_hint">请输入您的真实姓名</string>
    <string name="telephone">电话号码</string>
    <string name="code">请输入验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="codes">验证</string>
    <string name="first_passwd">密码</string>
    <string name="login_passwd_hint">请输入登录密码</string>
    <string name="login_second_passwd_hint">请确认登录密码</string>
    <string name="forget_passwd_hint">请输入新密码</string>
    <string name="forget_passwd_second_hint">请确认新密码</string>
    <string name="second_passwd">确认密码</string>
    <string name="next">下一步</string>
    <string name="send">发送</string>
    <string name="send_">发送</string>
    <string name="feed_back">在线反馈</string>
    <string name="want_road_show">上传项目</string>
    <string name="jzt">金指投</string>
    <string name="telephone_hint">请输入您的手机号</string>
    <string name="teleph">手机</string>
    <string name="code_hint">请输入验证码</string>
    <string name="get_passwd">重置密码</string>
    <string name="back_again">再按一次退出应用！</string>
    <string name="search_keyword">搜索关键词推荐:</string>
    <string name="search">搜索</string>
    <string name="new_advance">最新预告</string>
    <string name="more">更多 ></string>
    <string name="show_complete">路演完成</string>
    <string name="show_advance">路演预告</string>
    <string name="think_tank">智囊团</string>
    <string name="trades">所属行业：</string>
    <string name="road_time">路演时间：</string>
    <string name="get_money">已获融资</string>
    <string name="money_state">融资状态</string>
    <string name="money_total">计划融资</string>
    <string name="table_title">您所需要准备的资料：</string>
    <string name="table_context1">项目</string>
    <string name="table_context2">内容</string>
    <string name="table_context3">路演报告</string>
    <string name="table_context4">公司概况、产品或服务、行业概况、商业模式、核心竞争优势、财务状况、战略规划、融资计划</string>
    <string name="table_context5">图片、VCR</string>
    <string name="table_context6">核心团队照片、创始人照片、产品照片等公司宣传片</string>
    <string name="table_context7">请您将所需要的资料发送到 </string>
    <string name="table_context8">kf@jinzht.com </string>
    <string name="table_context9">2个工作日内会有项目顾问和您取得联系。</string>
    <string name="company_name">公司名称</string>
    <string name="company">公司</string>
    <string name="company_name_hint">请输入您的公司名称（必填）</string>
    <string name="linkman">联系人</string>
    <string name="telephone_num">电话</string>
    <string name="weichat">微信</string>
    <string name="weichat_hint">请输入您的微信号（必填）</string>
    <string name="company_states">公司状态</string>
    <string name="company_state_hint">请选择您的公司状态</string>
    <string name="state1">拟挂牌新三板</string>
    <string name="state2">拟挂牌上股交</string>
    <string name="state3">已挂牌新三板</string>
    <string name="state4">已挂牌上股交</string>
    <string name="state5">其他</string>
    <string name="update_information">[修改资料]</string>
    <string name="authentication">投资人认证</string>
    <string name="collecting">我的收藏</string>
    <string name="account">资金账户</string>
    <string name="replay">回复</string>
    <string name="share">邀请好友</string>
    <string name="about">关于我们</string>
    <string name="about_road">关于路演</string>
    <string name="about_crowdfunding">关于众筹</string>
    <string name="introduction">领投-跟投模式简介</string>
    <string name="true_name">姓名</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="phone_num">手机号码</string>
    <string name="phone">手机</string>
    <string name="user_type">用户类别</string>
    <string name="user_type_hint">请选择用户的类别(可多选)</string>
    <string name="position">职位</string>
    <string name="position_hint">请输入您的职位（必填）</string>
    <string name="area">地区</string>
    <string name="update_passwd">修改密码</string>
    <string name="person_information">个人资料</string>
    <string name="complete">完成</string>
    <string name="context">    尊敬的投资人：
为了使您更好地了解投资天使汇创业融资项目的风险，天使汇金融及天使汇根据《中华人民共和国公司法》、《北京天使汇金融信息服务有限公司在线投资服务协议》（以下简称《服务协议》）及其他制度、规则的有关规定，特为您提供此份投资风险揭示书。
如您接受上述《服务协议》及本投资风险揭示书，即表明您已充分了解并知晓投资创业融资项目的风险，并承诺承担该等风险。
 公司/主体风险：挂牌公司/其他民事主体的内部管理和外部决策不在天使汇金融/天使汇的控制范围内，天使汇金融/天使汇只能在法律法规及天使汇制度、业务规则允许的范围内尽可能向您进行完整的信息披露，鉴于此，您将承担由于挂牌公司/其他民事主体业务风险造成的损失。另，大部分挂牌公司/其他民事主体处于种子期或初创期，规模较小，抗市场风险和行业风险的能力较弱，主营业务收入可能波动较大，在一定程度上容易引起挂牌公司/其他民事主体价值的波动，您将承担由此造成的损失。
  技术风险：由于天使汇金融/天使汇的业务是通过电子通讯技术和电脑技术来实现的，这些技术存在被网络黑客和计算机病毒攻击的可能，天使汇将尽力保障平台正常运行，但您将承担由您的个人电脑终端故障或其他天使汇平台以外因素导致系统故障而造成的损失。
5、不可抗力因素导致的风险：诸如地震、火灾、水灾、战争等不可抗力因素可能导致交易系统的瘫痪，您将承担由此导致的损失。
6、其他天使汇金融/天使汇无法预见、无法避免或无法控制的风险。
5 、不可抗力因素导致的风险：诸如地震、火灾、水灾、战争等不可抗力因素可能导致交易系统的瘫痪，您将承担由此导致的损失。</string>
    <string name="dialog_image_title">请选择打开方式</string>
    <string name="last_page">已加载到最后一页</string>
    <string name="upload_people">点击上传身份证(仅用于认证使用)</string>
    <string name="upload_people_img">点击上传个人照片</string>
    <string name="upload_card">点击上传名片</string>
    <string name="person_invest">个人投资人</string>
    <string name="organization_invest">机构投资人</string>
    <string name="invest_context">符合以下条件之一的自然人投资者</string>
    <string name="invest_contexts">请先选择符合自然人投资者的条件</string>
    <string name="invest_context_two">符合以下条件之一的机构投资者</string>
    <string name="invest_contextss">请先选择符合机构投资者的条件</string>
    <string name="status">身份</string>
    <string name="status_context">知名天使投资人、名企高管、合伙人或有过TMT天使投资案例10万起的自然人</string>
    <string name="personal_income">个人收入</string>
    <string name="personal_income_context">最近俩年平均收入不低于100万元人民币或家庭（个人及其配偶）年均收入不低于200万元人民币</string>
    <string name="bond">证券类资产</string>
    <string name="bond_context">个人名下货币及其前一交易日终证券类资产值不低于100万元人民币</string>
    <string name="fixed_assets">固定资产</string>
    <string name="fixed_assets_context">个人名下固定资产（除主要居所）市值1000万元人民币以上</string>
    <string name="investor_des">备注：以上内容请参考《私募投资基金监督管理暂行办法（征求意见稿）》合格投资人规定</string>
    <string name="invest_range">投资领域</string>
    <string name="invest_range_hint">请填写您的投资领域</string>
    <string name="invest_smaple">投资案例</string>
    <string name="invest_live">投资经历</string>
    <string name="invested">我投资过项目</string>
    <string name="no_invest">我还没投资过项目</string>
    <string name="invested_hint">请填写您投资过的项目</string>
    <string name="read_invest">我已认真阅读并同意</string>
    <string name="read_invest_rule">《金指投在线投资规则》</string>
    <string name="risk_point">《风险提示》</string>
    <string name="invest_context1">符合以下条件之一的机构</string>
    <string name="condition1">注册资本（实缴）1000万元人民币以上</string>
    <string name="condition2">总资产/管理资产不低于3000万元人民币</string>
    <string name="condition3">净资产不低于1000万元人民币</string>
    <string name="condition4">最近三年每年净利润不低500万元人民币</string>
    <string name="fund">基金规模</string>
    <string name="fund_hint">请输入您的基金规模</string>
    <string name="introduce">一句话介绍</string>
    <string name="introduce_hint">请介绍您的机构</string>
    <string name="new_push">新消息推送</string>
    <string name="night_model">夜间模式</string>
    <string name="text_size">字体大小</string>
    <string name="clear_cahe">清除缓存</string>
    <string name="free_back">在线反馈</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="update_online">检测更新</string>
    <string name="go_back">注销登录</string>
    <string name="setting">设置</string>
    <string name="reply_mine">回复</string>
    <string name="lv_dot">绿点科技有限责任公司</string>
    <string name="project_overview">项目概览</string>
    <string name="money_plan">融资计划</string>
    <string name="company_news">公司重大新闻</string>
    <string name="interaction">互动专栏</string>
    <string name="invest_list">投资列表</string>
    <string name="collection">收藏项目</string>
    <string name="want_invest">我要投资</string>
    <string name="telephone_us">联系我们</string>
    <string name="want_lingtou">我要领投</string>
    <string name="want_gentou">我要跟投</string>
    <string name="your_name">姓名</string>
    <string name="your_name_hint">请输入您的真实姓名（必填）</string>
    <string name="your_tel_hint">请输入您的常用手机（必填）</string>
    <string name="your_invest_hint">请输入您的投资额度（必填）</string>
    <string name="your_area_hint">请选择您所在的区域（必选）</string>
    <string name="your_area">地域</string>
    <string name="invest_max">投资额度</string>
    <string name="invest_max_hint">请填写您的投资额度</string>
    <string name="investor_type">投资人类型</string>
    <string name="investor_man">自然人投资者</string>
    <string name="investor_oriz">机构投资者</string>
    <string name="oriz_name">机构名称</string>
    <string name="oriz_name_hint">请填写您的机构名称（必填）</string>
    <string name="jijin_model">基金规模</string>
    <string name="jijin_model_hint">请填写您的基金规模（必填）</string>
    <string name="invest_area">投资领域</string>
    <string name="invest_area_hint">请选择您的投资领域（必填）</string>
    <string name="your_phone">手机</string>
    <string name="invest_name">投资领域</string>
    <string name="invest_name_hint">请选择您的投资领域</string>
    <string name="sumbit_information">立即支付</string>
    <string name="sumbit_information2">上传资料</string>
    <string name="wechat_login">确认绑定</string>
    <string name="share_title">请选择分享方式</string>
    <string name="wechat">微信好友</string>
    <string name="wechat_moment">微信朋友圈</string>
    <string name="qq">QQ好友</string>
    <string name="sina">新浪微博</string>
    <string name="short_message">短信</string>
    <string name="come_road">来现场</string>
    <string name="last_num">剩余名额（名）</string>
    <string name="last_time">剩余时间（天）</string>
    <string name="post_information">提交资料</string>
    <string name="tel_uss">联系我们：400-698-8906</string>
    <string name="company_email">公司邮箱：jinzhitou@163.com</string>
    <string name="read">我已认真阅读并同意</string>
    <string name="project_xieyi">《项目发起协议》</string>
    <string name="des">请准备好以上资料，\n您所填写的信息通过审核后，3个工作日内，\n后台工作人员将与您取得联系。\n联系我们：400-698-8906</string>
    <string name="crop__saving">正在上传…</string>
    <string name="crop__wait">请等待...</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">确定</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
    <string name="submit">确认</string>
    <string name="person_resumes">个人履历</string>
    <string name="successful_project">成功案例</string>
    <string name="good_at">擅长领域</string>
    <string name="brain_tank">智囊团</string>
    <string name="invest_toast">《投资风险提示书》</string>
    <string name="wan">万</string>
    <string name="true_name_hint">请输入您的的真实姓名</string>
    <string name="shenfen">身份证号</string>
    <string name="shenfen_hint">请输入您的身份证号</string>
    <string name="now_addr">现住址地</string>
    <string name="now_addr_hint">请输入您的现住址地</string>
    <string name="tv_company">公司名称</string>
    <string name="tv_company_hint">请输入您的公司名称</string>
    <string name="tv_position">担任职位</string>
    <string name="tv_position_hint">请输入您的担任职位</string>
    <string name="organization_name">机构名称：</string>
    <string name="organization_name_hint">请输入您的机构名称</string>
    <string name="order_name">法人姓名：</string>
    <string name="money_scale">机构规模：</string>
    <string name="order_name_hint">请输入法人的姓名</string>
    <string name="money_scale_hint">请输入机构规模</string>
    <string name="invest_project">投资规划</string>
    <string name="invest_case">投资案例</string>
    <string name="send_word">寄语</string>
    <string name="send_word_hint">填写您的个性签名（可选填）</string>
    <string name="invest_project_hint">填写您的投资能力和预投项目总数（可选填）</string>
    <string name="invest_case_hint">填写您的投资经历即具体投资项目（可选填）</string>
</resources>